src/shared/oncoprint/oql-parser.js
const oql_parser = (function() {
    /*
     * Generated by PEG.js 0.8.0.
     *
     * http://pegjs.majda.cz/
     */

    function peg$subclass(child, parent) {
        function ctor() { this.constructor = child; }
        ctor.prototype = parent.prototype;
        child.prototype = new ctor();
    }

    function SyntaxError(message, expected, found, offset, line, column) {
        this.message  = message;
        this.expected = expected;
        this.found    = found;
        this.offset   = offset;
        this.line     = line;
        this.column   = column;

        this.name     = "SyntaxError";
    }

    peg$subclass(SyntaxError, Error);

    function parse(input) {
        var options = arguments.length > 1 ? arguments[1] : {},

            peg$FAILED = {},

            peg$startRuleFunctions = { start: peg$parsestart },
            peg$startRuleFunction  = peg$parsestart,

            peg$c0 = function() { return false; },
            peg$c1 = peg$FAILED,
            peg$c2 = /^[\n]/,
            peg$c3 = { type: "class", value: "[\\n]", description: "[\\n]" },
            peg$c4 = ";",
            peg$c5 = { type: "literal", value: ";", description: "\";\"" },
            peg$c6 = [],
            peg$c7 = /^[0-9]/,
            peg$c8 = { type: "class", value: "[0-9]", description: "[0-9]" },
            peg$c9 = function(number) { return number.join("");},
            peg$c10 = "-",
            peg$c11 = { type: "literal", value: "-", description: "\"-\"" },
            peg$c12 = function(number) { return "-"+number;},
            peg$c13 = ".",
            peg$c14 = { type: "literal", value: ".", description: "\".\"" },
            peg$c15 = function(whole_part, decimal_part) { return whole_part + "." + decimal_part;},
            peg$c16 = function(decimal_part) { return "."+decimal_part;},
            peg$c17 = function(whole_part) {return whole_part;},
            peg$c18 = /^[\-_.@\/a-zA-Z0-9*]/,
            peg$c19 = { type: "class", value: "[\\-_.@\\/a-zA-Z0-9*]", description: "[\\-_.@\\/a-zA-Z0-9*]" },
            peg$c20 = function(word) { return word.join("") },
            peg$c21 = /^[GPAVLIMCFYWHKRQNEDST]/,
            peg$c22 = { type: "class", value: "[GPAVLIMCFYWHKRQNEDST]", description: "[GPAVLIMCFYWHKRQNEDST]" },
            peg$c23 = function(letter) { return letter; },
            peg$c24 = /^[ \t\r]/,
            peg$c25 = { type: "class", value: "[ \\t\\r]", description: "[ \\t\\r]" },
            peg$c26 = "amp",
            peg$c27 = { type: "literal", value: "AMP", description: "\"AMP\"" },
            peg$c28 = "homdel",
            peg$c29 = { type: "literal", value: "HOMDEL", description: "\"HOMDEL\"" },
            peg$c30 = "gain",
            peg$c31 = { type: "literal", value: "GAIN", description: "\"GAIN\"" },
            peg$c32 = "hetloss",
            peg$c33 = { type: "literal", value: "HETLOSS", description: "\"HETLOSS\"" },
            peg$c34 = "mut",
            peg$c35 = { type: "literal", value: "MUT", description: "\"MUT\"" },
            peg$c36 = "exp",
            peg$c37 = { type: "literal", value: "EXP", description: "\"EXP\"" },
            peg$c38 = "prot",
            peg$c39 = { type: "literal", value: "PROT", description: "\"PROT\"" },
            peg$c40 = function(listofgenes, rest) { return listofgenes.map(function(gene) { return {"gene":gene, "alterations":false}; }).concat(rest); },
            peg$c41 = function(listofgenes) { return listofgenes.map(function(gene) { return {"gene":gene, "alterations":false}; }); },
            peg$c42 = function(first, rest) { return [first].concat(rest); },
            peg$c43 = function(first) { return [first]; },
            peg$c44 = function(geneName, rest) { return [geneName].concat(rest);},
            peg$c45 = function(geneName1, geneName2) { return [geneName1, geneName2]; },
            peg$c46 = ":",
            peg$c47 = { type: "literal", value: ":", description: "\":\"" },
            peg$c48 = function(geneName, alts) { return {"gene": geneName, "alterations": alts}; },
            peg$c49 = function(geneName) { return {"gene": geneName, "alterations":false}; },
            peg$c50 = function(a1, a2) { return [a1].concat(a2);},
            peg$c51 = function(a1) { return [a1]; },
            peg$c52 = function(cmd) { return cmd; },
            peg$c53 = function() { return "AMP"; },
            peg$c54 = function() { return "HOMDEL"; },
            peg$c55 = function() { return "GAIN"; },
            peg$c56 = function() { return "HETLOSS"; },
            peg$c57 = "cna",
            peg$c58 = { type: "literal", value: "CNA", description: "\"CNA\"" },
            peg$c59 = function(op, constrval) { return {"alteration_type":"cna", "constr_rel":op, "constr_val":constrval}; },
            peg$c60 = function(constrval) { return {"alteration_type":"cna", "constr_rel":"=", "constr_val":constrval}; },
            peg$c61 = "MUT",
            peg$c62 = "=",
            peg$c63 = { type: "literal", value: "=", description: "\"=\"" },
            peg$c64 = function(mutation) { return {"alteration_type":"mut", "constr_rel": "=", "constr_type":mutation.type, "constr_val":mutation.value, "info":mutation.info}; },
            peg$c65 = "!=",
            peg$c66 = { type: "literal", value: "!=", description: "\"!=\"" },
            peg$c67 = function(mutation) { return {"alteration_type":"mut", "constr_rel": "!=", "constr_type":mutation.type, "constr_val":mutation.value, "info":mutation.info}; },
            peg$c68 = function() { return {"alteration_type":"mut"}; },
            peg$c69 = "EXP",
            peg$c70 = function(op, constrval) { return {"alteration_type":"exp", "constr_rel":op, "constr_val":parseFloat(constrval)}; },
            peg$c71 = "FUSION",
            peg$c72 = { type: "literal", value: "FUSION", description: "\"FUSION\"" },
            peg$c73 = function() { return {"alteration_type":"fusion"}; },
            peg$c74 = "PROT",
            peg$c75 = function(op, constrval) { return {"alteration_type":"prot", "constr_rel":op, "constr_val":parseFloat(constrval)}; },
            peg$c76 = ">=",
            peg$c77 = { type: "literal", value: ">=", description: "\">=\"" },
            peg$c78 = function() { return ">="; },
            peg$c79 = "<=",
            peg$c80 = { type: "literal", value: "<=", description: "\"<=\"" },
            peg$c81 = function() { return "<="; },
            peg$c82 = ">",
            peg$c83 = { type: "literal", value: ">", description: "\">\"" },
            peg$c84 = function() { return ">"; },
            peg$c85 = "<",
            peg$c86 = { type: "literal", value: "<", description: "\"<\"" },
            peg$c87 = function() { return "<"; },
            peg$c88 = "missense",
            peg$c89 = { type: "literal", value: "MISSENSE", description: "\"MISSENSE\"" },
            peg$c90 = function() { return {"type":"class", "value":"MISSENSE", "info":{}}; },
            peg$c91 = "nonsense",
            peg$c92 = { type: "literal", value: "NONSENSE", description: "\"NONSENSE\"" },
            peg$c93 = function() { return {"type":"class", "value":"NONSENSE", "info":{}}; },
            peg$c94 = "nonstart",
            peg$c95 = { type: "literal", value: "NONSTART", description: "\"NONSTART\"" },
            peg$c96 = function() { return {"type":"class", "value":"NONSTART", "info":{}}; },
            peg$c97 = "nonstop",
            peg$c98 = { type: "literal", value: "NONSTOP", description: "\"NONSTOP\"" },
            peg$c99 = function() { return {"type":"class", "value":"NONSTOP", "info":{}}; },
            peg$c100 = "frameshift",
            peg$c101 = { type: "literal", value: "FRAMESHIFT", description: "\"FRAMESHIFT\"" },
            peg$c102 = function() { return {"type":"class", "value":"FRAMESHIFT", "info":{}}; },
            peg$c103 = "inframe",
            peg$c104 = { type: "literal", value: "INFRAME", description: "\"INFRAME\"" },
            peg$c105 = function() { return {"type":"class", "value":"INFRAME", "info":{}}; },
            peg$c106 = "splice",
            peg$c107 = { type: "literal", value: "SPLICE", description: "\"SPLICE\"" },
            peg$c108 = function() { return {"type":"class", "value":"SPLICE", "info":{}}; },
            peg$c109 = "trunc",
            peg$c110 = { type: "literal", value: "TRUNC", description: "\"TRUNC\"" },
            peg$c111 = function() { return {"type":"class", "value":"TRUNC", "info":{}}; },
            peg$c112 = "promoter",
            peg$c113 = { type: "literal", value: "PROMOTER", description: "\"PROMOTER\"" },
            peg$c114 = function() { return {"type":"class", "value":"PROMOTER", "info":{}}; },
            peg$c115 = function(letter, position, string) { return {"type":"name" , "value":(letter+position+string), "info":{}};},
            peg$c116 = function(letter, position) { return {"type":"position", "value":parseInt(position), "info":{"amino_acid":letter.toUpperCase()}}; },
            peg$c117 = function(mutation_name) { return {"type":"name", "value":mutation_name, "info":{}}; },

            peg$currPos          = 0,
            peg$reportedPos      = 0,
            peg$cachedPos        = 0,
            peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
            peg$maxFailPos       = 0,
            peg$maxFailExpected  = [],
            peg$silentFails      = 0,

            peg$result;

        if ("startRule" in options) {
            if (!(options.startRule in peg$startRuleFunctions)) {
                throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
            }

            peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
        }

        function text() {
            return input.substring(peg$reportedPos, peg$currPos);
        }

        function offset() {
            return peg$reportedPos;
        }

        function line() {
            return peg$computePosDetails(peg$reportedPos).line;
        }

        function column() {
            return peg$computePosDetails(peg$reportedPos).column;
        }

        function expected(description) {
            throw peg$buildException(
                null,
                [{ type: "other", description: description }],
                peg$reportedPos
            );
        }

        function error(message) {
            throw peg$buildException(message, null, peg$reportedPos);
        }

        function peg$computePosDetails(pos) {
            function advance(details, startPos, endPos) {
                var p, ch;

                for (p = startPos; p < endPos; p++) {
                    ch = input.charAt(p);
                    if (ch === "\n") {
                        if (!details.seenCR) { details.line++; }
                        details.column = 1;
                        details.seenCR = false;
                    } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
                        details.line++;
                        details.column = 1;
                        details.seenCR = true;
                    } else {
                        details.column++;
                        details.seenCR = false;
                    }
                }
            }

            if (peg$cachedPos !== pos) {
                if (peg$cachedPos > pos) {
                    peg$cachedPos = 0;
                    peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
                }
                advance(peg$cachedPosDetails, peg$cachedPos, pos);
                peg$cachedPos = pos;
            }

            return peg$cachedPosDetails;
        }

        function peg$fail(expected) {
            if (peg$currPos < peg$maxFailPos) { return; }

            if (peg$currPos > peg$maxFailPos) {
                peg$maxFailPos = peg$currPos;
                peg$maxFailExpected = [];
            }

            peg$maxFailExpected.push(expected);
        }

        function peg$buildException(message, expected, pos) {
            function cleanupExpected(expected) {
                var i = 1;

                expected.sort(function(a, b) {
                    if (a.description < b.description) {
                        return -1;
                    } else if (a.description > b.description) {
                        return 1;
                    } else {
                        return 0;
                    }
                });

                while (i < expected.length) {
                    if (expected[i - 1] === expected[i]) {
                        expected.splice(i, 1);
                    } else {
                        i++;
                    }
                }
            }

            function buildMessage(expected, found) {
                function stringEscape(s) {
                    function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

                    return s
                        .replace(/\\/g,   '\\\\')
                        .replace(/"/g,    '\\"')
                        .replace(/\x08/g, '\\b')
                        .replace(/\t/g,   '\\t')
                        .replace(/\n/g,   '\\n')
                        .replace(/\f/g,   '\\f')
                        .replace(/\r/g,   '\\r')
                        .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
                        .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
                        .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
                        .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
                }

                var expectedDescs = new Array(expected.length),
                    expectedDesc, foundDesc, i;

                for (i = 0; i < expected.length; i++) {
                    expectedDescs[i] = expected[i].description;
                }

                expectedDesc = expected.length > 1
                    ? expectedDescs.slice(0, -1).join(", ")
                + " or "
                + expectedDescs[expected.length - 1]
                    : expectedDescs[0];

                foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

                return "Expected " + expectedDesc + " but " + foundDesc + " found.";
            }

            var posDetails = peg$computePosDetails(pos),
                found      = pos < input.length ? input.charAt(pos) : null;

            if (expected !== null) {
                cleanupExpected(expected);
            }

            return new SyntaxError(
                message !== null ? message : buildMessage(expected, found),
                expected,
                found,
                pos,
                posDetails.line,
                posDetails.column
            );
        }

        function peg$parsestart() {
            var s0, s1;

            s0 = peg$parseQuery();
            if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parsesp();
                if (s1 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c0();
                }
                s0 = s1;
            }

            return s0;
        }

        function peg$parsebr() {
            var s0, s1, s2;

            s0 = peg$currPos;
            if (peg$c2.test(input.charAt(peg$currPos))) {
                s1 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c3); }
            }
            if (s1 !== peg$FAILED) {
                s2 = peg$parsebr();
                if (s2 !== peg$FAILED) {
                    s1 = [s1, s2];
                    s0 = s1;
                } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c1;
            }
            if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 59) {
                    s1 = peg$c4;
                    peg$currPos++;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c5); }
                }
                if (s1 !== peg$FAILED) {
                    s2 = peg$parsebr();
                    if (s2 !== peg$FAILED) {
                        s1 = [s1, s2];
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c1;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                }
                if (s0 === peg$FAILED) {
                    if (peg$c2.test(input.charAt(peg$currPos))) {
                        s0 = input.charAt(peg$currPos);
                        peg$currPos++;
                    } else {
                        s0 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c3); }
                    }
                    if (s0 === peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 59) {
                            s0 = peg$c4;
                            peg$currPos++;
                        } else {
                            s0 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c5); }
                        }
                    }
                }
            }

            return s0;
        }

        function peg$parseNaturalNumber() {
            var s0, s1, s2;

            s0 = peg$currPos;
            s1 = [];
            if (peg$c7.test(input.charAt(peg$currPos))) {
                s2 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s2 !== peg$FAILED) {
                while (s2 !== peg$FAILED) {
                    s1.push(s2);
                    if (peg$c7.test(input.charAt(peg$currPos))) {
                        s2 = input.charAt(peg$currPos);
                        peg$currPos++;
                    } else {
                        s2 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c8); }
                    }
                }
            } else {
                s1 = peg$c1;
            }
            if (s1 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c9(s1);
            }
            s0 = s1;

            return s0;
        }

        function peg$parseNumber() {
            var s0, s1, s2, s3;

            s0 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 45) {
                s1 = peg$c10;
                peg$currPos++;
            } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
            if (s1 !== peg$FAILED) {
                s2 = peg$parseNumber();
                if (s2 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c12(s2);
                    s0 = s1;
                } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c1;
            }
            if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parseNaturalNumber();
                if (s1 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 46) {
                        s2 = peg$c13;
                        peg$currPos++;
                    } else {
                        s2 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c14); }
                    }
                    if (s2 !== peg$FAILED) {
                        s3 = peg$parseNaturalNumber();
                        if (s3 !== peg$FAILED) {
                            peg$reportedPos = s0;
                            s1 = peg$c15(s1, s3);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c1;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c1;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                }
                if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    if (input.charCodeAt(peg$currPos) === 46) {
                        s1 = peg$c13;
                        peg$currPos++;
                    } else {
                        s1 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c14); }
                    }
                    if (s1 !== peg$FAILED) {
                        s2 = peg$parseNaturalNumber();
                        if (s2 !== peg$FAILED) {
                            peg$reportedPos = s0;
                            s1 = peg$c16(s2);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c1;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c1;
                    }
                    if (s0 === peg$FAILED) {
                        s0 = peg$currPos;
                        s1 = peg$parseNaturalNumber();
                        if (s1 !== peg$FAILED) {
                            peg$reportedPos = s0;
                            s1 = peg$c17(s1);
                        }
                        s0 = s1;
                    }
                }
            }

            return s0;
        }

        function peg$parseString() {
            var s0, s1, s2;

            s0 = peg$currPos;
            s1 = [];
            if (peg$c18.test(input.charAt(peg$currPos))) {
                s2 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c19); }
            }
            if (s2 !== peg$FAILED) {
                while (s2 !== peg$FAILED) {
                    s1.push(s2);
                    if (peg$c18.test(input.charAt(peg$currPos))) {
                        s2 = input.charAt(peg$currPos);
                        peg$currPos++;
                    } else {
                        s2 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c19); }
                    }
                }
            } else {
                s1 = peg$c1;
            }
            if (s1 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c20(s1);
            }
            s0 = s1;

            return s0;
        }

        function peg$parseAminoAcid() {
            var s0, s1;

            s0 = peg$currPos;
            if (peg$c21.test(input.charAt(peg$currPos))) {
                s1 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c22); }
            }
            if (s1 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c23(s1);
            }
            s0 = s1;

            return s0;
        }

        function peg$parsesp() {
            var s0, s1;

            s0 = [];
            if (peg$c24.test(input.charAt(peg$currPos))) {
                s1 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c25); }
            }
            if (s1 !== peg$FAILED) {
                while (s1 !== peg$FAILED) {
                    s0.push(s1);
                    if (peg$c24.test(input.charAt(peg$currPos))) {
                        s1 = input.charAt(peg$currPos);
                        peg$currPos++;
                    } else {
                        s1 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c25); }
                    }
                }
            } else {
                s0 = peg$c1;
            }

            return s0;
        }

        function peg$parsemsp() {
            var s0, s1;

            s0 = [];
            if (peg$c24.test(input.charAt(peg$currPos))) {
                s1 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c25); }
            }
            while (s1 !== peg$FAILED) {
                s0.push(s1);
                if (peg$c24.test(input.charAt(peg$currPos))) {
                    s1 = input.charAt(peg$currPos);
                    peg$currPos++;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c25); }
                }
            }

            return s0;
        }

        function peg$parseAMP() {
            var s0;

            if (input.substr(peg$currPos, 3).toLowerCase() === peg$c26) {
                s0 = input.substr(peg$currPos, 3);
                peg$currPos += 3;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c27); }
            }

            return s0;
        }

        function peg$parseHOMDEL() {
            var s0;

            if (input.substr(peg$currPos, 6).toLowerCase() === peg$c28) {
                s0 = input.substr(peg$currPos, 6);
                peg$currPos += 6;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c29); }
            }

            return s0;
        }

        function peg$parseGAIN() {
            var s0;

            if (input.substr(peg$currPos, 4).toLowerCase() === peg$c30) {
                s0 = input.substr(peg$currPos, 4);
                peg$currPos += 4;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c31); }
            }

            return s0;
        }

        function peg$parseHETLOSS() {
            var s0;

            if (input.substr(peg$currPos, 7).toLowerCase() === peg$c32) {
                s0 = input.substr(peg$currPos, 7);
                peg$currPos += 7;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c33); }
            }

            return s0;
        }

        function peg$parseMUT() {
            var s0;

            if (input.substr(peg$currPos, 3).toLowerCase() === peg$c34) {
                s0 = input.substr(peg$currPos, 3);
                peg$currPos += 3;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c35); }
            }

            return s0;
        }

        function peg$parseEXP() {
            var s0;

            if (input.substr(peg$currPos, 3).toLowerCase() === peg$c36) {
                s0 = input.substr(peg$currPos, 3);
                peg$currPos += 3;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c37); }
            }

            return s0;
        }

        function peg$parsePROT() {
            var s0;

            if (input.substr(peg$currPos, 4).toLowerCase() === peg$c38) {
                s0 = input.substr(peg$currPos, 4);
                peg$currPos += 4;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c39); }
            }

            return s0;
        }

        function peg$parseQuery() {
            var s0, s1, s2, s3, s4, s5;

            s0 = peg$currPos;
            s1 = peg$parseListOfGenes();
            if (s1 !== peg$FAILED) {
                s2 = peg$parsemsp();
                if (s2 !== peg$FAILED) {
                    s3 = peg$parsebr();
                    if (s3 !== peg$FAILED) {
                        s4 = peg$parseQuery();
                        if (s4 !== peg$FAILED) {
                            peg$reportedPos = s0;
                            s1 = peg$c40(s1, s4);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c1;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c1;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c1;
            }
            if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parseListOfGenes();
                if (s1 !== peg$FAILED) {
                    s2 = peg$parsemsp();
                    if (s2 !== peg$FAILED) {
                        s3 = peg$parsebr();
                        if (s3 !== peg$FAILED) {
                            peg$reportedPos = s0;
                            s1 = peg$c41(s1);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c1;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c1;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                }
                if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = peg$parseListOfGenes();
                    if (s1 !== peg$FAILED) {
                        s2 = peg$parsemsp();
                        if (s2 !== peg$FAILED) {
                            peg$reportedPos = s0;
                            s1 = peg$c41(s1);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c1;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c1;
                    }
                    if (s0 === peg$FAILED) {
                        s0 = peg$currPos;
                        s1 = peg$parsemsp();
                        if (s1 !== peg$FAILED) {
                            s2 = peg$parseSingleGeneQuery();
                            if (s2 !== peg$FAILED) {
                                s3 = peg$parsemsp();
                                if (s3 !== peg$FAILED) {
                                    s4 = peg$parsebr();
                                    if (s4 !== peg$FAILED) {
                                        s5 = peg$parseQuery();
                                        if (s5 !== peg$FAILED) {
                                            peg$reportedPos = s0;
                                            s1 = peg$c42(s2, s5);
                                            s0 = s1;
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$c1;
                                        }
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$c1;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$c1;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$c1;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c1;
                        }
                        if (s0 === peg$FAILED) {
                            s0 = peg$currPos;
                            s1 = peg$parsemsp();
                            if (s1 !== peg$FAILED) {
                                s2 = peg$parseSingleGeneQuery();
                                if (s2 !== peg$FAILED) {
                                    s3 = peg$parsemsp();
                                    if (s3 !== peg$FAILED) {
                                        s4 = peg$parsebr();
                                        if (s4 !== peg$FAILED) {
                                            peg$reportedPos = s0;
                                            s1 = peg$c43(s2);
                                            s0 = s1;
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$c1;
                                        }
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$c1;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$c1;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$c1;
                            }
                            if (s0 === peg$FAILED) {
                                s0 = peg$currPos;
                                s1 = peg$parsemsp();
                                if (s1 !== peg$FAILED) {
                                    s2 = peg$parseSingleGeneQuery();
                                    if (s2 !== peg$FAILED) {
                                        s3 = peg$parsemsp();
                                        if (s3 !== peg$FAILED) {
                                            peg$reportedPos = s0;
                                            s1 = peg$c43(s2);
                                            s0 = s1;
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$c1;
                                        }
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$c1;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$c1;
                                }
                            }
                        }
                    }
                }
            }

            return s0;
        }
